--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
     <link rel="stylesheet" href="style.css">
     <title>Library Project</title>
 </head>
@@ -15,13 +15,6 @@
             <button id="new-book-button">Add New Book</button>
         </div>
         <div id="book-container">
-            <div class="book">
-                <div class="title">Lord of the Rings</div>
-                <div class="author">J.R.R. Tolkien</div>
-                <div class="pages">900 Pages</div>
-                <button class="remove-button">Remove</button>
-                <button class="read-button">Read?</button>
-            </div>
         </div>
     </div>
 </body>
